fix(navbar): align switcher order & header styles with other webapps
related to OPT-7221

--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -1,10 +1,13 @@
 .cds--header {
   z-index: var(--z-header);
 
-  .appLink {
-    &,
-    &:visited {
-      color: var(--grey-base-40);
-    }
+  // TODO: Remove this after enabling the carbon css reset
+  a:hover {
+    text-decoration: none;
+  }
+
+  // TODO: Remove this after enabling the carbon css reset
+  .cds--side-nav__items li {
+    list-style: none;
   }
 }
